# Skills

./: GITHUB_PROJECT_GUIDE.md  README.md  index.md  install.sh  skills-lock.json
github/: SKILL.md
github-actions-template/: SKILL.md
github-actions-template/scripts/: setup.py
github-actions-template/workflows/: ci-auto-fix.yml  pr-review.yml  project-drive.yml  project-setup.yml
github-cloud-agent/: SKILL.md
github-cloud-agent/scripts/: headless_driver.py  llm_client.py
github-cloud-agent/workflows/: agent.yml
project-driver/: SKILL.md
project-driver/scripts/: drive.py
project-planner/: SKILL.md
project-planner/scripts/: generate_task_list.py  llm.py  plan_generator.py
project-setup/: SKILL.md
project-setup/scripts/: sync_to_github.py  test_parse.py
project-task-debugger/: SKILL.md
project-task-debugger/scripts/: debug.py
project-task-finish/: SKILL.md
project-task-finish/scripts/: finish.py
project-task-implementer/: SKILL.md
project-task-implementer/scripts/: track_progress.py
project-task-review/: SKILL.md
project-task-review/scripts/: qa_review.py  review.py
project-task-start/: SKILL.md
project-task-start/scripts/: start.py
project-workflow/: SKILL.md
skill-manager/: README.md  SKILL.md  pyproject.toml
skill-manager/scripts/: index_skills.py  setup_env.sh
skill-manager/src/agent_skill_manager/: __init__.py  cli.py
web_researcher/: SKILL.md
web_researcher/scripts/: search_and_summarize.py
