[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-skill-manager"
version = "0.1.0"
description = "A package manager for AI agent skills - install, update, and manage agent skill packages"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["ai", "agent", "skills", "package-manager", "llm", "automation"]
authors = [
    {name = "PCHANUL", email = ""}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/PCHANUL/Skills"
Repository = "https://github.com/PCHANUL/Skills"
Issues = "https://github.com/PCHANUL/Skills/issues"

[project.scripts]
skill-manager = "agent_skill_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
